--- a/ang-blog-dashboard/src/app/app.component.html
+++ b/ang-blog-dashboard/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<div class="app-body"></div>
+<div class="app-body">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
