add categories to firebase database

--- a/ang-blog-dashboard/src/app/categories/categories.component.html
+++ b/ang-blog-dashboard/src/app/categories/categories.component.html
@@ -1,1 +1,27 @@
-<p>categories works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 bg-secondary-theme p-5 shadow-effect">
+      <h3 class="text-center text-theme-primary">New Categories</h3>
+      <p class="text-center mb-5">You can add new categories from here ..!</p>
+      <form
+        action=""
+        class="row text-center"
+        #categoryForm="ngForm"
+        (ngSubmit)="onSubmit(categoryForm)"
+      >
+        <div class="form-check col-md-10">
+          <input
+            name="category"
+            type="text"
+            class="form-control shadow-effect"
+            placeholder="Add New Categories"
+            ngModel
+          />
+        </div>
+        <div class="col-md-2">
+          <button class="btn btn-info mb-2 btn-theme">Add Category</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
