create categorie service

--- a/ang-blog-dashboard/src/app/categories/categories.component.html
+++ b/ang-blog-dashboard/src/app/categories/categories.component.html
@@ -15,11 +15,27 @@
             type="text"
             class="form-control shadow-effect"
             placeholder="Add New Categories"
+            #newCategory="ngModel"
             ngModel
+            required
+            [ngClass]="{
+              'is-invalid': newCategory.touched && newCategory.invalid
+            }"
           />
+          <div
+            class="alert alert-danger"
+            *ngIf="newCategory.touched && newCategory.invalid"
+          >
+            Category field is required
+          </div>
         </div>
         <div class="col-md-2">
-          <button class="btn btn-info mb-2 btn-theme">Add Category</button>
+          <button
+            class="btn btn-info mb-2 btn-theme"
+            [disabled]="categoryForm.invalid"
+          >
+            Add Category
+          </button>
         </div>
       </form>
     </div>
