--- a/ang-blog-dashboard/src/styles.css
+++ b/ang-blog-dashboard/src/styles.css
@@ -1,5 +1,6 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import "ngx-toastr/toastr";
 
 :root {
   --primary-color: #026467;
