--- a/ang-blog-dashboard/src/app/categories/categories.component.html
+++ b/ang-blog-dashboard/src/app/categories/categories.component.html
@@ -1,8 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 bg-secondary-theme p-5 shadow-effect">
-      <h3 class="text-center text-theme-primary">New Categories</h3>
-      <p class="text-center mb-5">You can add new categories from here ..!</p>
+      <h3 class="text-center text-theme-primary">
+        {{ formStatus }} Categories
+      </h3>
+      <p class="text-center mb-5">
+        You can {{ formStatus }} new categories from here ..!
+      </p>
       <form
         action=""
         class="row text-center"
@@ -21,6 +25,7 @@
             [ngClass]="{
               'is-invalid': newCategory.touched && newCategory.invalid
             }"
+            [ngModel]="formCategory"
           />
           <div
             class="alert alert-danger"
@@ -34,10 +39,51 @@
             class="btn btn-info mb-2 btn-theme"
             [disabled]="categoryForm.invalid"
           >
-            Add Category
+            {{ formStatus }} Category
           </button>
         </div>
       </form>
     </div>
+  </div>
+  <div class="row mt-5 mb-5">
+    <div class="col-md-3"></div>
+
+    <div class="col-md-6">
+      <div class="card shadow-effect">
+        <div class="card-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Category</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let category of categoryArray; let i = index">
+                <td>{{ i + 1 }}</td>
+                <td>{{ category.data.category }}</td>
+                <td>
+                  <button
+                    class="btn btn-sm btn-warning"
+                    (click)="onEdit(category.id, category.data.category)"
+                  >
+                    Edit
+                  </button>
+                  <button
+                    class="btn btn-sm btn-danger ms-2"
+                    (click)="onDelete(category.id)"
+                  >
+                    Delete
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3"></div>
   </div>
 </div>
