--- a/ang-blog-dashboard/src/styles.css
+++ b/ang-blog-dashboard/src/styles.css
@@ -10,7 +10,7 @@
 }
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   color: var(--body-text-color);
 }
 .site-logo {
@@ -29,6 +29,7 @@ body {
 }
 .bg-theme {
   background-color: var(--primary-color);
+  color: var(--secondary-color);
 }
 .bg-secondary-theme {
   background-color: var(--secondary-color);
@@ -41,7 +42,6 @@ input[type="text"],
 input[type="email"] {
   height: 60px;
   padding-left: 20px;
-  font-size: 13px;
   width: 100%;
 }
 .btn-theme {
