fix kolkov - fontawesome

--- a/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -67,6 +67,7 @@
           <div class="card-body">
             <div>
               <label for="" class="form-label">Content</label>
+              <angular-editor></angular-editor>
             </div>
           </div>
         </div>
