upload img firebase

--- a/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <form action="">
+  <form action="" [formGroup]="postForm" (ngSubmit)="onSubmit()">
     <div class="row">
       <div class="col-md-7">
         <div class="card shadow-effect">
@@ -17,7 +17,27 @@
                 type="text"
                 class="form-control"
                 (keyup)="onTitleChanged($event)"
+                formControlName="title"
+                [ngClass]="{
+                  'is-invalid': fc.title.touched && fc.title.invalid
+                }"
               />
+              <div *ngIf="fc.title.errors?.required">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.title.touched && fc.title.invalid"
+                >
+                  Title is required.
+                </div>
+              </div>
+              <div *ngIf="fc.title.errors?.minlength">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.title.touched && fc.title.invalid"
+                >
+                  Title must be atleast 10 charectors long.
+                </div>
+              </div>
             </div>
             <div class="mt-1">
               <label for="" class="form-label">Permalink</label>
@@ -25,13 +45,45 @@
                 type="text"
                 class="form-control"
                 name="permalink"
-                [(ngModel)]="permalink"
-                disabled
+                formControlName="permalink"
+                [value]="permalink"
               />
+              <div *ngIf="fc.permalink.errors?.required">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.permalink.touched && fc.permalink.invalid"
+                >
+                  Permalink is required.
+                </div>
+              </div>
             </div>
             <div class="mt-1">
               <label for="" class="form-label">Excerpt</label>
-              <textarea cols="30" rows="10" class="form-control"></textarea>
+              <textarea
+                cols="30"
+                rows="10"
+                class="form-control"
+                formControlName="excerpt"
+                [ngClass]="{
+                  'is-invalid': fc.excerpt.touched && fc.excerpt.invalid
+                }"
+              ></textarea>
+              <div *ngIf="fc.excerpt.errors?.required">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.excerpt.touched && fc.excerpt.invalid"
+                >
+                  Excerpt is required.
+                </div>
+              </div>
+              <div *ngIf="fc.excerpt.errors?.minlength">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.excerpt.touched && fc.excerpt.invalid"
+                >
+                  Excerpt must be atleast 50 charectors long.
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -40,12 +92,29 @@
       <div class="col-md-5 mt-3">
         <div>
           <label for="" class="form-label">Please Select a post category</label>
-          <select class="form-select">
+          <select
+            class="form-select"
+            formControlName="category"
+            [ngClass]="{
+              'is-invalid': fc.category.touched && fc.category.invalid
+            }"
+          >
             <option value="" disabled>Please select a category</option>
-            <option *ngFor="let category of categories" value="">
+            <option
+              *ngFor="let category of categories"
+              value="{{ category.id }}-{{ category.data.category }}"
+            >
               {{ category.data.category }}
             </option>
           </select>
+          <div *ngIf="fc.category.errors?.required">
+            <div
+              class="alert alert-danger"
+              *ngIf="fc.category.touched && fc.category.invalid"
+            >
+              Please select a post category.
+            </div>
+          </div>
         </div>
 
         <div class="mt-1">
@@ -56,7 +125,19 @@
             class="form-control"
             accept="image/*"
             (change)="showPreview($event)"
+            formControlName="postImg"
+            [ngClass]="{
+              'is-invalid': fc.postImg.touched && fc.postImg.invalid
+            }"
           />
+          <div *ngIf="fc.postImg.errors?.required">
+            <div
+              class="alert alert-danger"
+              *ngIf="fc.postImg.touched && fc.postImg.invalid"
+            >
+              Post Image is required.
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -67,13 +148,26 @@
           <div class="card-body">
             <div>
               <label for="" class="form-label">Content</label>
-              <angular-editor></angular-editor>
+              <angular-editor
+                placeholder="Add your content here"
+                formControlName="content"
+              ></angular-editor>
+              <div *ngIf="fc.content.errors?.required">
+                <div
+                  class="alert alert-danger"
+                  *ngIf="fc.content.touched && fc.content.invalid"
+                >
+                  Content is required.
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-12 text-center mb-5">
-        <button class="btn btn-info bg-theme">Save Post</button>
+        <button class="btn btn-info bg-theme" [disabled]="postForm.invalid">
+          Save Post
+        </button>
         <button class="btn btn-warning ms-3" routerLink="/posts">
           Back to Post
         </button>
