--- a/ang-blog-dashboard/src/app/posts/all-post/all-post.component.html
+++ b/ang-blog-dashboard/src/app/posts/all-post/all-post.component.html
@@ -16,4 +16,43 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card shadow-effect">
+        <div class="card-body">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Post Image</th>
+                <th>Title</th>
+                <th>Excerpt</th>
+                <th>Category</th>
+                <th>Date</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let post of postArray; let i = index">
+                <td width="10">{{ i + 1 }}</td>
+                <td width="200">
+                  <img
+                    src="{{ post.data.postImgPath }}"
+                    alt=""
+                    class="img-fluid"
+                  />
+                </td>
+                <td width="200">{{ post.data.title }}</td>
+                <td width="300">{{ post.data.excerpt }}</td>
+                <td>{{ post.data.category.category }}</td>
+                <td>{{ post.data.createdAt.toMillis() | date }}</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
