--- a/ang-blog-dashboard/src/app/categories/categories.component.html
+++ b/ang-blog-dashboard/src/app/categories/categories.component.html
@@ -35,10 +35,7 @@
           </div>
         </div>
         <div class="col-md-2">
-          <button
-            class="btn btn-info mb-2 btn-theme"
-            [disabled]="categoryForm.invalid"
-          >
+          <button class="btn mb-2 btn-theme" [disabled]="categoryForm.invalid">
             {{ formStatus }} Category
           </button>
         </div>
