--- a/ang-blog-dashboard/src/app/posts/all-post/all-post.component.html
+++ b/ang-blog-dashboard/src/app/posts/all-post/all-post.component.html
@@ -70,7 +70,7 @@
                   </button>
                   <button
                     *ngIf="post.data.isFeatured"
-                    class="btn btn-sm btn-info ms-2"
+                    class="btn btn-sm btn-theme ms-2"
                     (click)="onFeatured(post.id, false)"
                   >
                     Remove Featured
