--- a/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
+++ b/ang-blog-dashboard/src/app/posts/new-post/new-post.component.html
@@ -168,7 +168,7 @@
           </div>
         </div>
         <div class="col-md-12 text-center mb-5">
-          <button class="btn btn-info bg-theme" [disabled]="postForm.invalid">
+          <button class="btn btn-theme bg-theme" [disabled]="postForm.invalid">
             {{ formStatus }} Post
           </button>
           <button
