--- a/ang-blog-dashboard/src/app/layouts/header/header.component.html
+++ b/ang-blog-dashboard/src/app/layouts/header/header.component.html
@@ -1,5 +1,11 @@
 <header class="navbar navbar-expand-lg fixed-top bg-white">
   <div class="container justify-content-center">
-    <a href="#" class="site-logo">ANG-BLOG</a>
+    <span routerLink="/" class="site-logo">ANG-BLOG</span>
+  </div>
+  <div class="container justify-content-center">
+    <span class="me-3 user-email">{{ userEmail }}</span>
+    <button class="btn btn-sm btn-info bg-secondary-theme text-theme-primary">
+      Logout
+    </button>
   </div>
 </header>
