--- a/ang-blog-app/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/ang-blog-app/src/app/layouts/category-navbar/category-navbar.component.html
@@ -1,14 +1,9 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
     <div class="collapse navbar-collapse justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item ms-3"><a href="" class="nav-link"> Design </a></li>
+      <ul class="navbar-nav" *ngFor="let category of categoryArray">
         <li class="nav-item ms-3">
-          <a href="" class="nav-link"> Inspiration </a>
-        </li>
-        <li class="nav-item ms-3"><a href="" class="nav-link"> Sports </a></li>
-        <li class="nav-item ms-3">
-          <a href="" class="nav-link"> Politics </a>
+          <a href="" class="nav-link"> {{ category.data.category }} </a>
         </li>
       </ul>
     </div>
