--- a/ang-blog-app/src/styles.css
+++ b/ang-blog-app/src/styles.css
@@ -12,6 +12,33 @@ body {
   font-size: 12px;
   color: var(--body-text-color);
 }
+
+.scroller {
+  width: 100%;
+  height: 200px;
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #eee;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #55aa55;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #88dd88;
+}
+
 .site-logo {
   padding: 5px 20px;
   border-radius: 20px;
