--- a/ang-blog-app/src/app/layouts/post-card/post-card.component.css
+++ b/ang-blog-app/src/app/layouts/post-card/post-card.component.css
@@ -1,3 +1,19 @@
 .card {
   max-width: 400px;
 }
+.img-post {
+  height: 200px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h5 {
+  font-size: 15px;
+}
+.post-excerpt {
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
