--- a/ang-blog-app/src/app/layouts/post-card/post-card.component.html
+++ b/ang-blog-app/src/app/layouts/post-card/post-card.component.html
@@ -1,23 +1,24 @@
-<div class="card shadow-effect">
-  <img
-    src="https://images.pexels.com/photos/1174932/pexels-photo-1174932.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-    alt="post-image"
-    class="card-img-top"
-  />
+<div class="card shadow-effect" *ngIf="postData">
+  <div
+    class="img-post"
+    [ngStyle]="{ backgroundImage: 'url(' + postData.data.postImgPath + ')' }"
+  ></div>
   <div class="card-body">
-    <small class="bg-light text-danger text-center">Design</small>
+    <small class="bg-light text-danger text-center">{{
+      postData.data.category.category
+    }}</small>
     <small class="bg-light text-success text-center ms-3">Featured</small>
-    <small class="bg-light text-info text-center ms-3">Views - 100,123</small>
-    <h5 class="mt-1">HOW TO START A BLOG IN 2023 EDITED NEW CATEGORY</h5>
+    <small class="bg-light text-info text-center ms-3"
+      >Views - {{ postData.data.views }}</small
+    >
+    <h5 class="mt-1">{{ postData.data.title }}</h5>
 
-    <p>
-      Lorem Ipsum has been the industry's standard dummy text ever since the
-      1500s, when an unknown printer took a galley of type and scrambled it to
-      make a type specimen book.
+    <p class="post-excerpt">
+      {{ postData.data.excerpt }}
     </p>
 
     <small class="bg-light text-warning text-center ml-3">
-      LAST UPDATE - Sep 20, 2023
+      LAST UPDATE - {{ postData.data.createdAt.toMillis() | date }}
     </small>
   </div>
 </div>
