--- a/ang-blog-app/src/app/pages/home/home.component.html
+++ b/ang-blog-app/src/app/pages/home/home.component.html
@@ -10,20 +10,11 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-3 post-item">
-        <app-post-card></app-post-card>
-      </div>
-
-      <div class="col-lg-3 post-item">
-        <app-post-card></app-post-card>
-      </div>
-
-      <div class="col-lg-3 post-item">
-        <app-post-card></app-post-card>
-      </div>
-
-      <div class="col-lg-3 post-item">
-        <app-post-card></app-post-card>
+      <div
+        class="col-lg-3 post-item"
+        *ngFor="let featuredPost of featuredPostArray"
+      >
+        <app-post-card [postData]="featuredPost"></app-post-card>
       </div>
     </div>
   </div>
