--- a/ang-blog-app/src/app/pages/home/home.component.html
+++ b/ang-blog-app/src/app/pages/home/home.component.html
@@ -26,23 +26,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
   </div>
   <div class="row">
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
-    </div>
-    <div class="col-md-4 mt-3">
-      <app-post-card></app-post-card>
+    <div class="col-md-4 mt-3" *ngFor="let latestPost of latestPostArray">
+      <app-post-card [postData]="latestPost"></app-post-card>
     </div>
   </div>
 </section>
