--- a/ang-blog-app/src/app/layouts/category-navbar/category-navbar.component.html
+++ b/ang-blog-app/src/app/layouts/category-navbar/category-navbar.component.html
@@ -3,7 +3,12 @@
     <div class="collapse navbar-collapse justify-content-center">
       <ul class="navbar-nav" *ngFor="let category of categoryArray">
         <li class="nav-item ms-3">
-          <a href="" class="nav-link"> {{ category.data.category }}</a>
+          <a
+            class="nav-link"
+            [routerLink]="['/category', category.data.category, category.id]"
+          >
+            {{ category.data.category }}</a
+          >
         </li>
       </ul>
     </div>
