--- a/ang-blog-app/src/app/layouts/header/header.component.html
+++ b/ang-blog-app/src/app/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="navbar navbar-expand-lg fixed-top bg-white">
   <div class="container justify-content-center">
-    <a href="#" class="site-logo">ANG-BLOG</a>
+    <a routerLink="/" class="site-logo">ANG-BLOG</a>
   </div>
 </header>
