--- a/ang-blog-app/src/app/layouts/post-card/post-card.component.css
+++ b/ang-blog-app/src/app/layouts/post-card/post-card.component.css
@@ -1,6 +1,12 @@
 .card {
   max-width: 350px;
   height: 100%;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.card:hover {
+  outline: 1px solid var(--primary-color);
+  box-sizing: border-box;
 }
 .img-post {
   height: 200px;
