--- a/ang-blog-app/src/app/pages/single-post/single-post.component.html
+++ b/ang-blog-app/src/app/pages/single-post/single-post.component.html
@@ -1,64 +1,32 @@
 <div class="container">
   <div class="row ps-5 pe-5 justify-content-center">
     <div class="col-md-8">
-      <div class="card shadow-effect">
+      <div class="card shadow-effect" *ngIf="postData">
         <img
-          src="https://images.pexels.com/photos/1227497/pexels-photo-1227497.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          src="{{ postData.postImgPath }}"
           alt=""
           class="card-img-top img-fluid w-80 img-thumbnail w-100"
         />
         <div class="card-body">
-          <small class="bg-light text-danger text-center"> Design </small>
-          <small class="bg-light text-success text-center ms-2">
+          <small class="bg-light text-danger text-center">
+            {{ postData.category.category }}
+          </small>
+          <small
+            class="bg-light text-success text-center ms-2"
+            *ngIf="postData.isFeatured"
+          >
             Featured
           </small>
           <small class="bg-light text-info text-center ms-2">
-            View - 100,333
+            View - {{ postData.views }}
           </small>
           <small class="bg-light text-warning text-center ms-2">
-            LAST UPDATE - SEP 20, 2023
+            LAST UPDATE - {{ postData.createdAt.toMillis() | date }}
           </small>
           <h1 class="mt-3 mb-3">
-            HOW TO START A BLOG IN 2023 EDITED NEW CATEGORY
+            {{ postData.title }}
           </h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum. Sed ut
-            perspiciatis unde omnis iste natus error sit voluptatem accusantium
-            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
-            inventore veritatis et quasi architecto beatae vitae dicta sunt
-            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
-            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
-            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-            quia non numquam eius modi tempora incidunt ut labore et dolore
-            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-            nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut
-            aliquid ex ea commodi consequatur? Quis autem vel eum iure
-            reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-            consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla
-            pariatur? <br />
-            But I must explain to you how all this mistaken idea of denouncing
-            pleasure and praising pain was born and I will give you a complete
-            account of the system, and expound the actual teachings of the great
-            explorer of the truth, the master-builder of human happiness. No one
-            rejects, dislikes, or avoids pleasure itself, because it is
-            pleasure, but because those who do not know how to pursue pleasure
-            rationally encounter consequences that are extremely painful. Nor
-            again is there anyone who loves or pursues or desires to obtain pain
-            of itself, because it is pain, but because occasionally
-            circumstances occur in which toil and pain can procure him some
-            great pleasure. To take a trivial example, which of us ever
-            undertakes laborious physical exercise, except to obtain some
-            advantage from it? But who has any right to find fault with a man
-            who chooses to enjoy a pleasure that has no annoying consequences,
-            or one who avoids a pain that produces no resultant pleasure?
-          </p>
+          <p [innerHTML]="postData.content"></p>
         </div>
       </div>
 
@@ -66,9 +34,9 @@
       <app-comment-list></app-comment-list>
     </div>
     <div class="col-md-3">
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
-      <app-post-card></app-post-card>
+      <div *ngFor="let similarPost of similarPostArray">
+        <app-post-card [postData]="similarPost"></app-post-card>
+      </div>
     </div>
   </div>
 </div>
