--- a/ang-blog-app/src/app/subscription-form/subscription-form.component.html
+++ b/ang-blog-app/src/app/subscription-form/subscription-form.component.html
@@ -8,23 +8,65 @@
         sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
         ut labore et dolore magna aliqua.
       </p>
-      <form action="" class="row mt-5 mb-5 justify-content-center">
+      <div class="alert alert-danger mt-3" *ngIf="isEmailErrors">
+        Email is Already in use
+      </div>
+
+      <div class="alert alert-info mt-3" *ngIf="isSubscribed">
+        Thank you for subscribing to our newsletter service. Stay tuned for
+        Awesome blog posts ..!
+      </div>
+
+      <form
+        class="row mt-5 mb-5 justify-content-center"
+        #subForm="ngForm"
+        (ngSubmit)="onSubmit(subForm.value)"
+        *ngIf="!isSubscribed"
+      >
         <div class="form-group col-md-5">
           <input
             type="text"
-            class="form-control shadow-effect"
+            class="form-control"
             placeholder="Your Name"
+            name="name"
+            #Name="ngModel"
+            ngModel
+            required
+            [ngClass]="{ 'is-invalid': Name.touched && Name.invalid }"
           />
+          <div
+            class="text-danger text-start"
+            *ngIf="Name.touched && Name.invalid"
+          >
+            <div *ngIf="Name.errors?.['required']">Name is Required</div>
+          </div>
         </div>
         <div class="form-group col-md-5">
           <input
             type="email"
-            class="form-control shadow-effect"
+            class="form-control"
             placeholder="Email Address"
+            name="email"
+            #Email="ngModel"
+            ngModel
+            required
+            email
+            [ngClass]="{ 'is-invalid': Email.touched && Email.invalid }"
           />
+          <div
+            class="text-danger text-start"
+            *ngIf="Email.touched && Email.invalid"
+          >
+            <div *ngIf="Email.errors?.['required']">Email is Required</div>
+            <div *ngIf="Email.errors?.['email']">
+              Please Enter a Valid Email Address
+            </div>
+          </div>
         </div>
         <div class="col-md-2 d-grid">
-          <button class="btn btn-info btn-theme">SUBSCRIBE</button>
+          <button class="btn btn-info btn-theme" [disabled]="subForm.invalid">
+            SUBSCRIBE
+          </button>
         </div>
       </form>
     </div>
