--- a/ang-blog-dashboard/src/app/dashboard/dashboard.component.html
+++ b/ang-blog-dashboard/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4 mb-5">
+    <div class="col-md-6 mb-5">
       <div class="card shadow-effect" routerLink="/categories">
         <div class="card-body text-center bg-secondary-theme">
           <h1 class="mt-3 text-theme-primary">
@@ -12,7 +12,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 mb-5">
+    <div class="col-md-6 mb-5">
       <div class="card shadow-effect" routerLink="/posts">
         <div class="card-body text-center bg-secondary-theme">
           <h1 class="mt-3 text-theme-primary">
@@ -20,6 +20,18 @@
           </h1>
           <h2 class="text-theme-primary">Posts</h2>
           <p>Manage Your Posts Details Here.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 mb-5">
+      <div class="card shadow-effect" routerLink="/subscribers">
+        <div class="card-body text-center bg-secondary-theme">
+          <h1 class="mt-3 text-theme-primary">
+            <i class="fas fa-users"></i>
+          </h1>
+          <h2 class="text-theme-primary">Subscribers</h2>
+          <p>Manage Your Subscriber list Here.</p>
         </div>
       </div>
     </div>
